tests/baselines/reference/errorsWithCallablesInUnions01.errors.txt
tests/cases/compiler/errorsWithCallablesInUnions01.ts(10,12): error TS2322: Type '(x: string) => void' is not assignable to type 'IDirectiveLinkFn<number> | IDirectivePrePost<number>'.
  Type '(x: string) => void' has no properties in common with type 'IDirectivePrePost<number>'.


==== tests/cases/compiler/errorsWithCallablesInUnions01.ts (1 errors) ====
    interface IDirectiveLinkFn<TScope> {
        (scope: TScope): void;
    }
    
    interface IDirectivePrePost<TScope> {
        pre?: IDirectiveLinkFn<TScope>;
        post?: IDirectiveLinkFn<TScope>;
    }
    
    export let blah: IDirectiveLinkFn<number> | IDirectivePrePost<number> = (x: string) => {}
               ~~~~
!!! error TS2322: Type '(x: string) => void' is not assignable to type 'IDirectiveLinkFn<number> | IDirectivePrePost<number>'.
!!! error TS2322:   Type '(x: string) => void' has no properties in common with type 'IDirectivePrePost<number>'.
    